Closed Bug 1659950 Opened 4 years ago Closed 4 years ago

Crash in [@ OOM | large | mozalloc_abort | moz_xmalloc | nsTArray_base<T>::EnsureCapacity<T> | nsTArray_Impl<T>::ReplaceElementsAtInternal<T> | mozilla::ipc::InputStreamParams::operator=]

Categories

(Core :: XPCOM, defect)

defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox-esr68 --- wontfix
firefox-esr78 --- wontfix
firefox79 --- wontfix
firefox80 --- wontfix
firefox81 --- fixed

People

(Reporter: sg, Assigned: sg)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-76f27fa2-2d38-483b-9fdb-828bf0200817.

Top 10 frames of crashing thread:

0 mozglue.dll mozalloc_abort memory/mozalloc/mozalloc_abort.cpp:33
1 mozglue.dll mozalloc_handle_oom memory/mozalloc/mozalloc_oom.cpp:51
2 mozglue.dll moz_xmalloc memory/mozalloc/mozalloc.cpp:54
3 xul.dll nsTArray_base<nsTArrayInfallibleAllocator, nsTArray_RelocateUsingMemutils>::EnsureCapacity<nsTArrayInfallibleAllocator> xpcom/ds/nsTArray-inl.h:162
4 xul.dll nsTArray_Impl<mozilla::ipc::InputStreamParams, nsTArrayInfallibleAllocator>::ReplaceElementsAtInternal<nsTArrayInfallibleAllocator, mozilla::ipc::InputStreamParams> xpcom/ds/nsTArray.h:2382
5 xul.dll mozilla::ipc::InputStreamParams::operator= ipc/ipdl/InputStreamParams.cpp:1787
6 xul.dll nsMultiplexInputStream::SerializeInternal<mozilla::ipc::ChildToParentStreamActorManager> xpcom/io/nsMultiplexInputStream.cpp:1005
7 xul.dll nsMultiplexInputStream::Serialize xpcom/io/nsMultiplexInputStream.cpp:963
8 xul.dll mozilla::ipc::`anonymous namespace'::SerializeInputStreamWithFdsChild<mozilla::dom::ContentChild> ipc/glue/IPCStreamUtils.cpp:47
9 xul.dll mozilla::ipc::AutoIPCStream::Serialize ipc/glue/IPCStreamUtils.cpp:339
Pushed by sgiesecke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cd66384e9e09
Move instead of copy where possible in nsMultiplexInputStream::SerializeInternal. r=froydnj
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: