Bug 1659950 - Move instead of copy where possible in nsMultiplexInputStream::SerializeInternal. r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D87574